fixed some contrast errers

--- a/styles/index-styles.css
+++ b/styles/index-styles.css
@@ -27,7 +27,7 @@ body {
 
 .card {
     background-color: rgb(177, 59, 163);
-    color: rgb(222, 222, 222);
+    color: rgb(255, 255, 255);
     border-radius: 25px;
     padding: 2%;
     justify-content: center;
